Adicionado endpoint de status no Swagger, fix cpf para documento, validação de contas existentes, dominios de status e tipo usuario
